--- a/nwa17.html
+++ b/nwa17.html
@@ -33,6 +33,13 @@
                 <a href="https://en.wikipedia.org/wiki/Southern_Africa" target="_blank">Southern Africa.</a> For other
                 use, See <a href="https://en.wikipedia.org/wiki/Southern_Africa">South Africa(disambiguation).</a><br>
             </article>
+            
+            <!-- Tochukwu's change             -->
+            <article>
+                This article is about the Nigeria.For the geographical area,see<br>
+                <a href="https://en.wikipedia.org/wiki/Nigeria" target="_blank">Southern Africa.</a> For other
+                use, See <a href="https://en.wikipedia.org/wiki/Southern_Africa">South Africa(disambiguation).</a><br>
+            </article>
 
             <p>
                 <b>South Africa</b>, officially the <b>Republic of South Africa (RSA)</b>, is the southernmost country
